--- a/NgFronEnd/src/app/user/registration/registration.component.html
+++ b/NgFronEnd/src/app/user/registration/registration.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-4">
-    <div class="col-md-6">
-        <div class="row" style="height: 450px;">
+    <div class=" col-md-12">
+        <div class="row">
             <div class="col-md-12 my-auto side-header">
                 <img src="assets/images/add_user.png" class="mx-auto d-block">
                 <h1>User Registration</h1>
@@ -8,9 +8,9 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-12">
         <form [formGroup]="service.formModel" autocomplete="off">
-            <div class="form-group">
+            <div class="form-group required">
                 <label>Username</label>
                 <input class="form-control" formControlName="UserName">
             </div>
@@ -23,13 +23,13 @@
                 <input class="form-control" formControlName="FullName">
                 <div formGroupName="Passwords">
                 </div>
-                <div class="form-group">
+                <div class="form-group required">
                     <label>Password</label>
                     <input class="form-control" formControlName="Password">
                 </div>
-                <div class="form-group">
+                <div class="form-group required">
                     <label>Confirm Password</label>
-                    <input class="form-control" formControlName="ConfirmPassword">
+                    <input class=" form-control" formControlName="ConfirmPassword">
                 </div>
             </div>
             <div class="form-row">
