--- a/NgFronEnd/src/styles.css
+++ b/NgFronEnd/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: #478ea3;;
+    background-color: #478ea3;
 }
+
 
 input.form-control,input.form-control:focus{
     background-color: #ffc107;
@@ -14,6 +15,7 @@ input.form-control,input.form-control:focus{
 input.form-control:focus{
     box-shadow: none;
     border-bottom-color: black;
+    text-align: center;
 }
 
 button[type=submit].btn{
@@ -23,14 +25,15 @@ button[type=submit].btn{
 }
 
 div.form-group label{
+    text-align: center;
     color: black;
     font-weight: bold;
 }
 
 div.form-group.required>label:first-child:after{
     content:'*';
-    color: #dc3545;
-	padding-left: 5px;
+    color: #fa0820;
+	padding-left: 1px;
 }
 
 #toast-container > div {
@@ -38,9 +41,12 @@ div.form-group.required>label:first-child:after{
 }
 
 form{
-    margin: 0px 16px;
+    text-align: center;
+    max-width: 500px;
+    margin: auto;
 }
 
 div.side-header{
-    border:3px solid black;
+    text-align: center;
+    border:1px solid black;
 }
