--- a/NgFronEnd/src/app/user/user.component.html
+++ b/NgFronEnd/src/app/user/user.component.html
@@ -1,5 +1,14 @@
-<div class="container">
-    <div class="col-md-8 offset-md-2">
-        <router-outlet></router-outlet>
+<div class="wrapper">
+    <div class="wrapped-div">
+        <img src="assets/images/kingspan_logo.jpg" class="kingspan-logo rounded" alt="Logo">
+        <div class="tab-header">
+            <h2 routerLink='/user/login' routerLinkActive='active'>Log In</h2>
+            <h2 routerLink='/user/registration' routerLinkActive='active'>Sign Up</h2>
+        </div>
+        <div class="row">
+            <div class="col-md-10 offset-md-1">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
 </div>
