Logout functionality implemented

--- a/NgFronEnd/src/app/user/user.component.html
+++ b/NgFronEnd/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="wrapped-div">
-        <img src="assets/images/kingspan_logo.jpg" class="kingspan-logo rounded" alt="Logo">
+        <img src="assets/images/company_logo.jpg" class="company-logo rounded" alt="Logo">
         <div class="tab-header">
             <h2 routerLink='/user/login' routerLinkActive='active'>Log In</h2>
             <h2 routerLink='/user/registration' routerLinkActive='active'>Sign Up</h2>
