--- a/NgFronEnd/src/styles.css
+++ b/NgFronEnd/src/styles.css
@@ -94,7 +94,7 @@ div.form-group.required>label:first-child:after{
     font-size: 0.9rem;
  }
 
- .kingspan-logo {
+ .company-logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
