--- a/NgFronEnd/src/app/home/home.component.html
+++ b/NgFronEnd/src/app/home/home.component.html
@@ -1,4 +1,36 @@
-<nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand text-white">ERP System</a>
-    <button class="btn btn-danger my-2 my-sm-0" (click)="onLogout()">Logout</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+        aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">#ERP Web App |</a>
+
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Employees</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/adminpanel">Admin Panel</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <a class="btn btn-outline-success my-2 my-sm-0" style="margin-right: 5px;" href="#">My Account</a>
+            <button class="btn btn-danger my-2 my-sm-0" (click)="onLogout()">Logout</button>
+        </form>
+    </div>
 </nav>
+
+<div class="card m-5" style="width: 18rem;" *ngIf="userDetails">
+    <ul class="list-group">
+        <li class="list-group-item"> <strong>Username: </strong> {{userDetails.userName}}</li>
+        <li class="list-group-item"> <strong>Email: </strong> {{userDetails.email}}</li>
+        <li class="list-group-item"> <strong>Full Name: </strong> {{userDetails.fullName}}</li>
+    </ul>
+</div>
